<resources>
    <string name="app_name">Free Video Downlaoder</string>

    <string name="no_video">No Videos</string>
    <string name="my_creation">My Videos</string>
    <string name="set_download_limit_to_speed_up_download_progress">Set download limit to speed up download progress</string>
    <string name="set_maximum_active_queue">Set maximum active Queue</string>
    <string name="maximum_download">Maximum download</string>
    <string name="maximum_download_allows">Maximum download allows</string>
    <string name="maximum_queues">Maximum Queues</string>
    <string name="maxlimit">Maximum Download Limit</string>
    <string name="show_downloading">Enable Notification</string>
    <string name="showing_notification_for_downloading_file">Show notifications</string>
    <string name="search_engine">Search Engine</string>
    <string name="search_menu_title">Search</string>
    <string name="permission_access_location">Permission to access your location is required</string>
    <string name="permission_write_exterstorage">Permission is required to write files</string>
    <string name="help1">1. Browse the internet that you want to download video.</string>
    <string name="help2">2. You can also download video from social networks on logging into your account.</string>
    <string name="help3">3. Just play the video and download button appears in bottom of the screen.</string>
    <string name="help4">4. Tap on the download button and enter the file name with extension (only if the filename is empty) and tap on download Button.</string>
    <string name="help5">5. Video will be saved on your Storage directory.</string>
    <string name="help_note">Note: This application does NOT support browsing or downloading a content from Youtube and illegal or adult websites. Please read our Privacy policy before using this app.</string>
    <string name="tap_on_video">Once you tap on video, App will scan the video automatically and will show the video as given below.\10\10Tap on this button and you will get a list of scanned video files.</string>
    <string name="get_videos_downloaded">You will get Videos downloaded from Instagram and other websites in RocksDownloads</string>

    <string name="br_">Bookmarks</string>
    <string name="br_back">Back</string>
    <string name="br_copy_link">Copy Link</string>
    <string name="br_forward">Forward</string>
    <string name="br_sharelink">Share</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="title_home">Home</string>
    <string name="progress">Progress</string>
    <string name="completed">Downloaded</string>
    <string name="blank">%d</string>
    <string name="download_limit">Download limit</string>
    <string name="delbm">Do you want to delete the selected bookmarks?</string>
    <string name="action_search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="how">HOW TO</string>
    <string name="image">image</string>
    <string name="deloff">Do you want to delete the selected downloads?</string>
    <string name="no_downloads">No Downloads</string>
    <string name="flnot">This Video is not available on your internal storage.</string>
    <string name="paused">Paused</string>
    <string name="menu_vector_path">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>
    <string name="volume">Volume: %1$d</string>
    <string name="manage">Manage</string>
    <string name="settings_menu">Use Mobile Data to download</string>
    <string name="how_to_use_this_app">How to use this app</string>
    <string name="view_this_tutorial_to_use_this_app">View this tutorial to use this app</string>
    <string name="iunder">I Understand</string>
    <string name="chooseengine">Choose an Default Search Engine</string>
    <string name="alert">Alert</string>
    <string name="actived">You have active download(s), Do you want to pause active downloads and turn off Mobile Data?</string>
    <string name="pauseoff"><![CDATA[Pause &amp; Turn Off]]></string>
    <string name="activedel">Do you want to cancel the selected downloads?</string>
    <string name="watch_tutorial_video">Watch Tutorial Video</string>

    //Back Arrow Path Data
    <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>


    <string name="insta_app_name">Instagram</string>
    <string name="download_from_private_account">download_from_private_account</string>
    <string name="paste_link">Paste Link</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="view_stories">View Stories and Download from Private Account</string>
    <string name="login">Login</string>
    <string name="fourth_how_too">2. Open All in One Status Saver</string>
    <string name="or_download_using_copied_link">or Download using copied link</string>
    <string name="second_how_too">2. Share with All in One Status Saver</string>
    <string name="how_to_download">How to Download</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="stories">Stories</string>
    <string name="enter_url">Enter Url</string>
    <string name="do_u_want_to_download_media_from_pvt">Don\'t Want to Download Media from Private Account?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="open_josh">1. Open Josh</string>
    <string name="open_likee">1. Open Likee</string>
    <string name="open_mitron">1. Open Mitron</string>
    <string name="open_roposo">1. Open Roposo</string>
    <string name="open_sharechat">1. Open ShareChat</string>
    <string name="open_snack">1. Open Snack Video</string>
    <string name="open_tiktok">1. Open TikTok</string>
    <string name="open_twitter">1. Open Twitter</string>
    <string name="opn_fb">1. Open Facebook</string>
    <string name="opn_insta">1. Open Instagram</string>
    <string name="open_chingari">1. Open Chingari</string>
    <string name="cop_link_from_chingari">1. Copy Video Link from Chingari</string>
    <string name="cop_link_from_josh">1. Copy Video Link from Josh</string>
    <string name="cop_link_from_mitron">1. Copy Video Link from Mitron</string>
    <string name="cop_link_from_roposo">1. Copy Video Link from Roposo</string>
    <string name="cop_link_from_sharechat">1. Copy Video Link from ShareChat</string>
    <string name="cop_link_from_snack">1. Copy Video Link from SnackVideo</string>
    <string name="copy_video_link_frm_fb">1. Copy Video Link from Facebook</string>
    <string name="copy_video_link_from_likee">1. Copy Video Link from Likee</string>
    <string name="facebook_app_name">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="do_u_want_to_dlt">Do you want to delete?</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="gallery">Gallery</string>
    <string name="josh_app_name">Josh</string>
    <string name="chingari_app_name">Chingari</string>
    <string name="getting_downloading_link">Getting Downloading Link...</string>
    <string name="download_started">Download Started</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="whatsapp_not_installed">Whtasapp not installed.</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="share_app_message">share_app_message</string>
    <string name="app_not_available">App Not Available.</string>
    <string name="tag_line">Download All Status And Story</string>
    <string name="whatsapp_app_name"><![CDATA[WA & WA Business]]></string>
    <string name="mitron_app_name">Mitron</string>
    <string name="snack_app_name">Snack Video</string>
    <string name="sharechat_app_name">ShareChat</string>
    <string name="roposo_app_name">Roposo</string>
    <string name="twitter_app_name">Twitter</string>
    <string name="gallery_name">Gallery</string>
    <string name="pls_bck_again">Please click BACK again to exit</string>
    <string name="no_media_on_tweet">No Media on Tweet or Invalid Link</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="saved_to">Saved to:</string>
    <string name="no_result_found">No Result Found</string>
    <string name="vimeo_name">Vimeo</string>
    <string name="imdesc">Image</string>
    <string name="downloadcomp">Download Completed</string>
    <string name="downloadprog">Download in progress</string>
    <string name="download_paused">Paused..</string>
    <string name="file_exits">File already exit..</string>
    <string name="disabled_mobile">You have disabled downloading using Mobile Dat</string>
    <string name="nointernet">No active internet Connection..!</string>
    <string name="sdownload_paused">Paused..</string>
    <string name="download_resume">Resumed..!</string>
    <string name="queuelimit">Download Queue limit reached..</string>
    <string name="bm_added">Bookmark added</string>
    <string name="bm_removed">Bookmark removed</string>
    <string name="nofile">Sorry, No Video/Audio file is detected</string>
    <string name="br_validname">Sorry this Video can not Download..</string>
    <string name="br_fileexit">Sorry, File name is already exit or downloaded!!!</string>
    <string name="copylink">Link Copied.</string>
    <string name="How_to_use_Facebook_downloader">How to use Facebook downloader</string>
    <string name="download_other_web_sites">How to download videos from Instagram and other web sites</string>
    <string name="videos_found">Videos 2 found</string>
    <string name="legal_restrictions">Note - Due to legal restrictions, Youtube video can not be downloaded</string>

</resources>