<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/border_top_bottom">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        android:padding="@dimen/_6sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/help1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/help2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/help3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/help4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/help5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/help_note"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tos_video"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@color/blue"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_3sdp"
                android:text="@string/watch_tutorial_video"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
