<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing16">

    <ImageView
        android:id="@+id/how_to_use_cross"
        android:layout_width="34dp"
        android:layout_height="34dp"

        android:layout_marginTop="@dimen/spacing16"
        app:srcCompat="@drawable/ic_close_black_48dp"
        app:tint="#3654FF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing16"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/spacing18"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/How_to_use_Facebook_downloader"
                android:textColor="@color/white"
                android:textSize="@dimen/spacing16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fbhelptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/How_to_use_Facebook_downloader"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing24"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/spacing24"
                android:layout_marginEnd="@dimen/spacing16"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/download_other_web_sites"
                android:textColor="@color/white"
                android:textSize="@dimen/spacing16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instagramHelpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:layout_marginTop="@dimen/spacing8"
                android:fontFamily="@font/montserratlight"
                android:text="@string/tap_on_video"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/videosFoundHUD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing8"
                android:background="@drawable/videos_found_bar_bg"
                android:backgroundTint="@color/bg2"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1">

                <TextView
                    android:id="@+id/videosFoundText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserratlight"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500" />

                <TextView
                    android:id="@+id/getVideosText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserratlight"
                    android:gravity="center_vertical"
                    android:text="@string/videos_found"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing24"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:layout_marginTop="@dimen/spacing16"
                android:layout_marginBottom="@dimen/spacing16"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/get_videos_downloaded"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:layout_marginTop="@dimen/spacing16"
                android:layout_marginBottom="@dimen/spacing16"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/legal_restrictions"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:layout_marginTop="@dimen/spacing16"
                android:layout_marginBottom="@dimen/spacing16"
                android:autoLink="email"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="Thanks for using our app"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>