<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/LLHowToLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_white"
        android:backgroundTint="@color/bg2"
        android:elevation="3dp"
        android:orientation="vertical"
        android:tag="layout/layout_how_to_0">

        <TextView
            android:id="@+id/tvHowToHeadOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserratlight"
            android:text="@string/how_to_download"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LLHowToOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@color/bg1"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHowTo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserratlight"
                android:text="1. Open TikTok"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/im_howto1"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvHowTo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/second_how_too"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/im_howto2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHowToHeadTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserratlight"
            android:text="@string/or_download_using_copied_link"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white"
            android:elevation="3dp"
            android:backgroundTint="@color/bg1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHowTo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserratlight"
                android:text="1. Open TikTok"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/im_howto3"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvHowTo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/fourth_how_too"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/im_howto4"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />
        </LinearLayout>
    </LinearLayout>
</layout>
