<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"

    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone">

                <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:cursorVisible="true"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_arrow" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/help"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:background="@color/white"
                    android:text="@string/how"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:visibility="gone"
                    android:textStyle="bold"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@null"
                    app:strokeColor="@color/blue"
                    app:strokeWidth="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/app_font3"
                    android:text="@string/bookmarks"
                    android:textColor="#787878"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
